[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/gui/SettingsTab.gd" type="Script" id=1]
[ext_resource path="res://fonts/Exo2-Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/Exo2-SemiBold.otf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/Exo2-Light.otf" type="DynamicFontData" id=4]
[ext_resource path="res://textures/gui/grey4.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 256, 256 )

[sub_resource type="DynamicFont" id=8]
size = 60
font_data = ExtResource( 2 )

[node name="Settings" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1600.0
margin_bottom = 900.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
margin_right = 1600.0
margin_bottom = 223.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Settings"
text = "Settings"
scroll_active = false

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
margin_top = 227.0
margin_right = 1600.0
margin_bottom = 673.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
margin_right = 1600.0
margin_bottom = 446.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NameContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
margin_right = 1600.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HSplitContainer/VBoxContainer/NameContainer"]
margin_right = 798.0
margin_bottom = 146.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 2 )
text = "Name:"

[node name="NameField" type="TextEdit" parent="VBoxContainer/HSplitContainer/VBoxContainer/NameContainer"]
margin_left = 802.0
margin_right = 1202.0
margin_bottom = 80.0
rect_min_size = Vector2( 400, 80 )
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_constants/completion_max_width = 12

[node name="SettingContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 1600.0
margin_bottom = 296.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HSplitContainer/VBoxContainer/SettingContainer"]
margin_right = 798.0
margin_bottom = 146.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "Port:"
text = "Port:"
scroll_active = false

[node name="SettingField" type="TextEdit" parent="VBoxContainer/HSplitContainer/VBoxContainer/SettingContainer"]
margin_left = 802.0
margin_right = 1102.0
margin_bottom = 80.0
rect_min_size = Vector2( 300, 80 )
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 5 )
custom_constants/completion_max_width = 5

[node name="SettingContainer2" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/VBoxContainer"]
margin_top = 300.0
margin_right = 1600.0
margin_bottom = 446.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HSplitContainer/VBoxContainer/SettingContainer2"]
margin_right = 798.0
margin_bottom = 146.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 6 )
text = "Setting2:"

[node name="SettingField2" type="TextEdit" parent="VBoxContainer/HSplitContainer/VBoxContainer/SettingContainer2"]
margin_left = 802.0
margin_right = 1202.0
margin_bottom = 80.0
rect_min_size = Vector2( 400, 80 )
size_flags_horizontal = 2
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
custom_constants/completion_max_width = 12

[node name="ButtonContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 677.0
margin_right = 1600.0
margin_bottom = 900.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ApplyButton" type="Button" parent="VBoxContainer/ButtonContainer"]
margin_left = 650.0
margin_top = 36.0
margin_right = 950.0
margin_bottom = 186.0
rect_min_size = Vector2( 300, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "Apply"
[connection signal="pressed" from="VBoxContainer/ButtonContainer/ApplyButton" to="." method="_on_ApplyButton_pressed"]
